buffer: add Buffer.safe(), Buffer.unsafe(), and --zero-fill-buffers
Several changes:

* Deprecate Buffer(num) and SlowBuffer(num)
* Add `Buffer.safe(num)`, `Buffer.unsafe(num)`, `SlowBuffer.safe(num)`
  and `SlowBuffer.unsafe(num)`
* Add `--zero-fill-buffers` command line option
* Add test cases
* Update benchmark/buffers/buffer-creation.js to expand benchmarks
* Update the docs

--- a/doc/node.1
+++ b/doc/node.1
@@ -66,6 +66,9 @@ and servers.
 
   --prof-process         process v8 profiler output generated using --prof
 
+  --zero-fill-buffers    automatically zero-fill all newly allocated
+                         Buffer and SlowBuffer instances
+
   --v8-options           print v8 command line options
 
   --tls-cipher-list=list use an alternative default TLS cipher list
